; ModuleID = '/home/carl/AnghaBench/mpv/video/extr_vdpau.c_mp_vdpau_get_ctx_from_av.c'
source_filename = "/home/carl/AnghaBench/mpv/video/extr_vdpau.c_mp_vdpau_get_ctx_from_av.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_vdpau_ctx = type { i32 }
%struct.TYPE_5__ = type { i64 }
%struct.TYPE_4__ = type { i64, %struct.mp_vdpau_ctx* }

@free_device_ref = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.mp_vdpau_ctx* @mp_vdpau_get_ctx_from_av(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.mp_vdpau_ctx*, align 8
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca %struct.TYPE_4__*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = inttoptr i64 %7 to i8*
  %9 = bitcast i8* %8 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %9, %struct.TYPE_4__** %4, align 8
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @free_device_ref, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %15, label %16

15:                                               ; preds = %1
  store %struct.mp_vdpau_ctx* null, %struct.mp_vdpau_ctx** %2, align 8
  br label %20

16:                                               ; preds = %1
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 1
  %19 = load %struct.mp_vdpau_ctx*, %struct.mp_vdpau_ctx** %18, align 8
  store %struct.mp_vdpau_ctx* %19, %struct.mp_vdpau_ctx** %2, align 8
  br label %20

20:                                               ; preds = %16, %15
  %21 = load %struct.mp_vdpau_ctx*, %struct.mp_vdpau_ctx** %2, align 8
  ret %struct.mp_vdpau_ctx* %21
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
